--- a/src/Pablo/PeopleBundle/Resources/views/Teacher/result.html.twig
+++ b/src/Pablo/PeopleBundle/Resources/views/Teacher/result.html.twig
@@ -49,12 +49,14 @@
 {% block javascripts %}
     {{ parent() }}
     <script type="text/javascript">
-        $('.date-selector').datepicker({
-            changeMonth: true,
-            changeYear: true,
-            yearRange: "-90:-6",
-            minDate: "-90y",
-            maxDate: new Date(new Date().getFullYear() - 6, 11, 31)
-        });
+        $(document).ready(function() {
+            $('.date-selector').datepicker({
+                changeMonth: true,
+                changeYear: true,
+                yearRange: "-90:-6",
+                minDate: "-90y",
+                maxDate: new Date(new Date().getFullYear() - 6, 11, 31)
+            });
+        })
     </script>
 {% endblock javascripts %}
