--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -34,13 +34,13 @@
             <h1>{{ status_text }} <small style="font: Tahoma; color: red;">Error {{ status_code }}</small></h1>
             <br/>
             <p>
-                La page que vous avez demand&eacute;e n'a pas pu être charg&eacute;e. Essayez &agrave; nouveau ou contactez votre webmaster.<br/>
-                Utilisez le bouton <b>Retour</b> de votre navigateur pour revenir à la page consult&eacute;e pr&eacute;c&eacute;demment
+                La page que vous avez demand&eacute;e n&apos;a pas pu &ecirc;tre charg&eacute;e. Essayez &agrave; nouveau ou contactez un administrateur de l&apos;application.<br/>
+                Utilisez le bouton <strong>Retour</strong> de votre navigateur pour revenir &agrave; la page consult&eacute;e pr&eacute;c&eacute;demment
             </p>
             <p>
-                <b>ou cliquez sur le bouton ci-dessous &colon;</b>
+                <strong>ou cliquez sur le bouton ci-dessous &colon;</strong>
             </p>
-            <a href="{{ path('pablo_user_home') }}" class="btn btn-large btn-info"><i class="icon-home icon-white"></i> Retour &agrave; l'Accueil</a>
+            <a href="{{ path('pablo_user_home') }}" class="btn btn-large btn-info"><i class="icon-home icon-white"></i> Retour &agrave; l&apos;Accueil</a>
         </div>
     </div>
 </body>
