--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,9 +33,10 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{ asset('assets/js/jquery-1.10.1.js') }}" type="text/javascript"></script>
     <script src="{{ asset('assets/js/bootstrap.js') }}" type="text/javascript"></script>
+    {#<script src="{{ asset('assets/js/holder/holder.js') }}" type="text/javascript"></script>#}
     <script src="{{ asset('assets/js/jquery-ui-1.10.3.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('assets/js/pablo.js') }}" type="text/javascript"></script>
     <script src="{{ asset('assets/js/jquery.ui.datepicker-fr.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/js/pablo.js') }}" type="text/javascript"></script>
 {% endblock %}
 </body>
 </html>
