--- a/src/Pablo/PeopleBundle/Resources/views/Employe/show.html.twig
+++ b/src/Pablo/PeopleBundle/Resources/views/Employe/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
    <div class="page-header">
-       <h2>Fiche Professeur</h2>
+       <h2>Fiche professeur</h2>
    </div>
     <div class="row">
         <div class="span6">
