--- a/src/Pablo/PeopleBundle/Resources/views/Personne/result.html.twig
+++ b/src/Pablo/PeopleBundle/Resources/views/Personne/result.html.twig
@@ -50,14 +50,6 @@
 {% block javascripts %}
     {{ parent() }}
     <script type="text/javascript">
-        $(document).ready(function() {
-            $('.date-selector').datepicker({
-                changeMonth: true,
-                changeYear: true,
-                yearRange: "-90:-6",
-                minDate: "-90y",
-                maxDate: new Date(new Date().getFullYear() - 6, 11, 31)
-            });
-        })
+        calendrier('.date-selector');
     </script>
 {% endblock javascripts %}
