--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,19 +8,19 @@
     <meta name="author" content="Toofoo">
     {% block stylesheets %}
         <!-- Le styles -->
-        <link href="{{ asset('assets/css/bootstrap.css') }}" rel="stylesheet">
+        <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
         <style type="text/css">
             body {
                 padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
                 padding-bottom: 40px;
             }
         </style>
-        <link href="{{ asset('assets/css/bootstrap-responsive.css') }}" rel="stylesheet">
+        <link href="{{ asset('assets/css/bootstrap-responsive.min.css') }}" rel="stylesheet">
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
         <script src="{{ asset('assets/js/html5shiv.js') }}"></script>
         <![endif]-->
-        <link href="{{ asset('assets/css/jquery-ui-1.10.3.css') }}" rel="stylesheet">
+        <link href="{{ asset('assets/css/jquery-ui-1.10.3.min.css') }}" rel="stylesheet">
     {% endblock %}
     <!-- Fav and touch icons -->
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
@@ -31,12 +31,11 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ asset('assets/js/jquery-1.10.1.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('assets/js/bootstrap.js') }}" type="text/javascript"></script>
-    {#<script src="{{ asset('assets/js/holder/holder.js') }}" type="text/javascript"></script>#}
-    <script src="{{ asset('assets/js/jquery-ui-1.10.3.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('assets/js/jquery.ui.datepicker-fr.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('assets/js/pablo.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/js/jquery-1.10.2.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/js/bootstrap.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/js/jquery-ui-1.10.3.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/js/jquery.ui.datepicker-fr.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/js/pablo-0.2.js') }}" type="text/javascript"></script>
 {% endblock %}
 </body>
 </html>
