--- a/src/Pablo/PeopleBundle/Resources/views/Adresse/create.html.twig
+++ b/src/Pablo/PeopleBundle/Resources/views/Adresse/create.html.twig
@@ -46,7 +46,7 @@
     {{ parent() }}
     <script type="text/javascript">
         $(document).ready(function() {
-            autosuggest('{{ path('pablo_localite_json') }}', '.city-selector');
+            autocompletion('{{ path('pablo_localite_json') }}', '.city-selector');
         })
     </script>
 {% endblock %}
