--- a/src/Pablo/UserBundle/Resources/views/Home/welcome.html.twig
+++ b/src/Pablo/UserBundle/Resources/views/Home/welcome.html.twig
@@ -1,30 +1,141 @@
 {% extends('PabloUserBundle::layout.html.twig') %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <style type="text/css">
+        .row {
+            padding-top: 10px;
+            padding-bottom: 70px;
+        }
+        img {
+            margin-right: 20px;
+        }
+    </style>
+{% endblock %}
+
 {% block content %}
     <div class="page-header">
+        {% for message in app.session.flashbag.get('notice') %}
+            <div class="alert {{ (message.type) ? 'alert-' ~ message.type }} span4 pull-right">
+                <strong>{{ (message.type == 'success') ? 'OK !' : 'Oups !' }}</strong>&nbsp;{{ message.content }}
+            </div>
+        {% endfor %}
         <h2>Bienvenue !</h2>
     </div>
-    <div class="row">
-        <div class="span6">
+    <div class="row"> <!-- Profil - Configuration - Logout -->
+        <div class="span4">
             <div class="media">
-                <img class="media-object pull-left" src="{{ asset('assets/img/custom-design/personal-information.png') }}" height="128px" width="128px">
+                <a href="{{ path('pablo_profile_edit') }}">
+                    <img class="media-object pull-left" src="{{ asset('assets/img/pretty-office/profil.png') }}" alt="profil" height="96px" width="96px">
+                </a>
                 <div class="media-body">
-                    <h3 class="media-heading">Mon profil</h3>
-                    <p>
-                        Nom d&apos;utilisateur&nbsp;&colon;&nbsp;<strong>{{ user.username|lower }}</strong><br>
-                        Groupe{{ (user.groups|length > 1) ? 's' }}&nbsp;&colon;&nbsp;
-                        <strong>{% for group in user.groups %}{{ (not loop.last) ? group.name|lower ~ ', ' : group.name|lower }}{% endfor %}</strong><br>
-                    </p>
-                    <a class="btn btn-info" href="{{ path('pablo_profile_edit') }}"><i class="icon-white icon-pencil"></i>&nbsp;&eacute;diter mon profil</a>
+                    <h4 class="media-heading">
+                        <a href="{{ path('pablo_profile_edit') }}">Mon profil</a>
+                    </h4>
                 </div>
             </div>
         </div>
-        <div class="span6">
-            {% for message in app.session.flashbag.get('profile') %}
-                <div class="alert {{ (message.type) ? 'alert-' ~ message.type }}" style="margin-top: 20px;">
-                    {{ message.content }}
+        {% if (is_granted('ROLE_SUPER_ADMIN')) %}
+            <div class="span4">
+                <div class="media">
+                    <a href="{{ path('pablo_user_notready') }}">
+                        <img class="media-object pull-left" src="{{ asset('assets/img/pretty-office/configuration.png') }}" alt="config" height="96px" width="96px">
+                    </a>
+                    <div class="media-body">
+                        <h4 class="media-heading">
+                            <a href="{{ path('pablo_user_notready') }}">Configuration</a>
+                        </h4>
+                    </div>
                 </div>
-            {% endfor %}
+            </div>
+        {% endif %}
+        <div class="span4 {{ (not is_granted('ROLE_SUPER_ADMIN')) ? 'offset4' }}">
+            <div class="media">
+                <a href="{{ path('pablo_user_logout') }}">
+                    <img class="media-object pull-left" src="{{ asset('assets/img/pretty-office/logout.png') }}" alt="logout" height="96px" width="96px">
+                </a>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        <a href="{{ path('pablo_user_logout') }}">Quitter</a>
+                    </h4>
+                </div>
+            </div>
         </div>
-    </div>
+    </div> <!-- /Profil - Configuration - Logout -->
+    <div class="row"> <!-- Académie - Cours - Professeurs -->
+        <div class="span4">
+            <div class="media">
+                <a href="{{ path('pablo_user_notready') }}">
+                    <img class="media-object pull-left" src="{{ asset('assets/img/pretty-office/academie.png') }}" alt="academie" height="96px" width="96px"/>
+                </a>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        <a href="{{ path('pablo_user_notready') }}" >Acad&eacute;mie</a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="media">
+                <a href="{{ path('pablo_user_notready') }}">
+                    <img class="media-object pull-left" src="{{ asset('assets/img/pretty-office/cours.png') }}" alt="cours" height="96px" width="96px"/>
+                </a>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        <a href="{{ path('pablo_user_notready') }}">Cours</a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="media">
+                <a href="{{ path('pablo_employe_list') }}">
+                    <img class="media-object pull-left" src="{{ asset('assets/img/pretty-office/professeurs.png') }}" alt="teachers" height="96px" width="96px"/>
+                </a>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        <a href="{{ path('pablo_employe_list') }}">Professeurs</a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div> <!-- /Académie - Cours - Professeurs -->
+    <div class="row"> <!-- Elèves - Minerval - Statistiques -->
+        <div class="span4">
+            <div class="media">
+                <a href="{{ path('pablo_personne_list') }}" >
+                    <img class="media-object pull-left" src="{{ asset('assets/img/pretty-office/eleves.png') }}" alt="eleves" height="96px" width="96px"/>
+                </a>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        <a href="{{ path('pablo_personne_list') }}" >&Eacute;l&egrave;ves</a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="media">
+                <a href="{{ path('pablo_user_notready') }}">
+                    <img class="media-object pull-left" src="{{ asset('assets/img/pretty-office/minerval.png') }}" alt="minerval" height="96px" width="96px"/>
+                </a>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        <a href="{{ path('pablo_user_notready') }}">Minerval</a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="media">
+                <a href="{{ path('pablo_user_notready') }}">
+                    <img class="media-object pull-left" src="{{ asset('assets/img/pretty-office/statistiques.png') }}" alt="statistiques" height="96px" width="96px"/>
+                </a>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        <a href="{{ path('pablo_user_notready') }}" >Statistiques</a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div> <!-- /Elèves - Minerval - Statistiques -->
 {% endblock content %}
