--- a/src/Pablo/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Pablo/UserBundle/Resources/views/Security/login.html.twig
@@ -2,7 +2,7 @@
 
 {% block stylesheets %}
     <!-- Le styles -->
-    <link href="{{ asset('assets/css/bootstrap.css') }}" rel="stylesheet">
+    <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
     <style type="text/css">
         body {
             padding-top: 40px;
@@ -36,7 +36,7 @@
         }
 
     </style>
-    <link href="{{ asset('assets/css/bootstrap-responsive.css') }}" rel="stylesheet">
+    <link href="{{ asset('assets/css/bootstrap-responsive.min.css') }}" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
