--- a/src/Pablo/PeopleBundle/Resources/views/Commentaire/_commentaires.html.twig
+++ b/src/Pablo/PeopleBundle/Resources/views/Commentaire/_commentaires.html.twig
@@ -12,10 +12,8 @@
         {{ (not loop.last) ? '<hr>' }}
     {% else %}
         <div class="alert alert-info">
-            <h4 class="alert-heading">Aucun résulat</h4>
-            <p>
-                Il n&apos;y a actuellement aucun commentaire enregistr&eacute;.
-            </p>
+            <h4>Aucun résulat</h4>
+            Il n&apos;y a actuellement aucun commentaire enregistr&eacute;.
         </div>
     {% endfor %}
     <p>
