--- a/src/Pablo/PeopleBundle/Resources/views/Email/_emails.html.twig
+++ b/src/Pablo/PeopleBundle/Resources/views/Email/_emails.html.twig
@@ -2,10 +2,8 @@
     <h4>E-mails</h4>
     {% if (personne.emails|length == 0) %}
         <div class="alert alert-info">
-            <h4 class="alert-heading">Aucun résulat</h4>
-            <p>
-                Il n&apos;y a actuellement aucune adresse e-mail enregistr&eacute;e.
-            </p>
+            <h4>Aucun résulat</h4>
+            Il n&apos;y a actuellement aucune adresse e-mail enregistr&eacute;e.
         </div>
     {% else %}
         <table class="table">
