--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,7 +35,7 @@
     <script src="{{ asset('assets/js/bootstrap.min.js') }}" type="text/javascript"></script>
     <script src="{{ asset('assets/js/jquery-ui-1.10.3.min.js') }}" type="text/javascript"></script>
     <script src="{{ asset('assets/js/jquery.ui.datepicker-fr.min.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('assets/js/pablo-0.2.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('assets/js/pablo.js') }}" type="text/javascript"></script>
 {% endblock %}
 </body>
 </html>
