--- a/src/Pablo/PeopleBundle/Resources/views/Employe/_attributions.html.twig
+++ b/src/Pablo/PeopleBundle/Resources/views/Employe/_attributions.html.twig
@@ -1,11 +1,9 @@
-<div class="span12">
+<div class="span6">
     <h4>Attributions</h4>
     {% if (personne.attributions|length == 0) %}
-        <div class="alert alert-info">
-            <h4 class="alert-heading">Aucun résulat</h4>
-            <p>
-                Il n&apos;y a actuellement aucune attributions enregistr&eacute;e.
-            </p>
+        <div class="alert alert-error">
+            <h4>Oups !</h4>
+            Ce module n&apos;a pas encore &eacute;t&eacute; d&eacute;velopp&eacute;.
         </div>
     {% else %}
         <table class="table">
@@ -42,5 +40,5 @@
             </tbody>
         </table>
     {% endif %}
-    <a class="btn" href="{{ path('pablo_attribution_add', {'id': personne.id}) }}">ajouter une attribution</a>
+    <a class="btn" href="{#{{ path('pablo_attribution_add', {'id': personne.id}) }}#}#attributions">ajouter une attribution</a>
 </div>
