--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -31,7 +31,7 @@
                                 <li><a href="{{ path('pablo_user_welcome', {'_switch_user': '_exit'}) }}">...redevenir root</a></li>
                                 <li class="divider"></li>
                             {% endif %}
-                            <li><a href="{{ path('pablo_user_logout') }}">d&eacute;connexionr</a></li>
+                            <li><a href="{{ path('pablo_user_logout') }}">d&eacute;connexion</a></li>
                         </ul>
                     </li>
                 </ul>
